- Fix overflow in asthacala/styles.css

--- a/asthacala/styles.css
+++ b/asthacala/styles.css
@@ -3,6 +3,7 @@ body {
 	font-family: "Myriad Pro", Myriad, "Liberation Sans", "Nimbus Sans L", "Helvetica Neue", Helvetica, Arial, sans-serif;
 	font-size: 16px;
 	color: #000000;
+    overflow-x: hidden;
 }
 
 .nav-item {
